feat: 修复一些问题
